--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css"/>
     <link rel="icon" href="./favicons/favicon-16x16.png"/>
     <script src="script.js" defer></script>
-    <title>DigtialSign</title>
+    <title>DigitalSign</title>
 </head>
 <body>
     <div class="main">
